required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version
---------------

- Fixed Oracle Spatial Data gets corrupt (#3541)

- Fixed issue with multiple styles and binding (#3538)

- Fixed multiple include tags not supported in xml mapfiles (#3530)

- Ensure the class is not marked BeforeFieldInit causing memory corruption with C#/CLR4 (#3438)

- Fixed MSSQL2008 driver returning invalid extent (#3498)

- Fix computation of shape bounds when the first line contains no points
  (#3119)(fixes #3383)

- Fixed error message tiles on zero-sized map cause memory allocation errors in maperror.c. (#3524)

Version 5.6.5 (2010-07-14):
---------------------------

- Fixed scale calculation problem caused by mapscale.c's inchesPerUnits 
  array being out of synch with MS_UNITS enum (#3173)

- Fixed bitmap text font rendering (tiny was not working) (#3475)


Version 5.6.4 (2010-07-08):
---------------------------

IMPORTANT SECURITY FIXES:

- Disabled some insecure (and potentially exploitable) mapserv command-line
  debug arguments (#3485). The --enable-cgi-cl-debug-args configure switch
  can be used to re-enable them for devs who really cannot get away without
  them and who understand the potential security risk (not recommended for 
  production servers or those who don't understand the security implications).

- Fixed possible buffer overflow in msTmpFile() (#3484)

Other fixes:

- Fixed possible race condition with connectiontype WFS layers (#3137)

- Modified mapserver units enum order to fix some problems with external 
  packages (#3173)

- fix blending of transparent layers with AGG on MSB archs (#3471)

- Fixed imageObj->saveImage() sends unnecessary headers (#3418) 
